--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        echo "secrets.dckr_pat_FhtW8YHMT7Jz7M4DEWjEDW5tz5I" | docker login -u "secrets.r0kkoo" --password-stdin docker.io
-        docker build . --file dockerfiles/train_model2.dockerfile --tag docker.io/secrets.r0kkoo/mlops74:$GITHUB_SHA
-        docker build . --file dockerfiles/train_model.dockerfile --tag docker.io/secrets.r0kkoo/mlops74:$GITHUB_SHA
-        docker push docker.io/secrets.r0kkoo/mlops74:$GITHUB_SHA
+        echo "${{ secrets.dckr_pat_FhtW8YHMT7Jz7M4DEWjEDW5tz5I }}" | docker login -u "${{ secrets.r0kkoo }}" --password-stdin docker.io
+        docker build . --file dockerfiles/train_model2.dockerfile --tag docker.io/${{ secrets.r0kkoo }}/mlops74:$GITHUB_SHA
+        docker build . --file dockerfiles/train_model.dockerfile --tag docker.io/${{ secrets.r0kkoo }}/mlops74:$GITHUB_SHA
+        docker push docker.io/${{ secrets.r0kkoo }}/mlops74:$GITHUB_SHA
