--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
+        echo "Docker Hub Username: ${{ secrets.r0kkoo }}"
+        echo "Docker Hub Access Token: ${{ secrets.dckr_pat_FhtW8YHMT7Jz7M4DEWjEDW5tz5I }}"
         echo "${{ secrets.dckr_pat_FhtW8YHMT7Jz7M4DEWjEDW5tz5I }}" | docker login \
             -u "${{ secrets.r0kkoo }}" --password-stdin docker.io
         docker build . --file mlops74/dockerfiles/train_model.dockerfile \
