--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,12 +16,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        echo "Docker Hub Username: ${{ secrets.r0kkoo }}"
-        echo "Docker Hub Access Token: ${{ secrets.dckr_pat_FhtW8YHMT7Jz7M4DEWjEDW5tz5I }}"
-        echo "${{ secrets.dckr_pat_FhtW8YHMT7Jz7M4DEWjEDW5tz5I }}" | docker login \
-            -u "${{ secrets.r0kkoo }}" --password-stdin docker.io
+        echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login \
+            -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
         docker build . --file mlops74/dockerfiles/train_model.dockerfile \
-            --tag docker.io/${{ secrets.r0kkoo }}/${{ secrets.mlops74 }}:$GITHUB_SHA
+            --tag docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:$GITHUB_SHA
         docker build . --file mlops74/dockerfiles/train_model2.dockerfile \
-            --tag docker.io/${{ secrets.r0kkoo }}/${{ secrets.mlops74 }}:$GITHUB_SHA
-        docker push docker.io/${{ secrets.r0kkoo }}/${{ secrets.mlops74 }}:$GITHUB_SHA
+            --tag docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:$GITHUB_SHA
+        docker push docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:$GITHUB_SHA
