--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,10 +13,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Install DVC
+      run: |
+        pip install dvc
+        pip install "dvc[gdrive]"
+
+    - name: Authenticate with DVC (using previously committed credentials)
       run: |
         cd mlops74
+        dvc pull data.dvc
+
+    - name: Build the Docker image
+      run: |
         ls -la
         echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login \
             -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
