--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,12 +19,11 @@ jobs:
     - name: Install DVC
       run: |
         pip install dvc
-        pip install "dvc[gdrive]"
 
     - name: Authenticate with DVC (using previously committed credentials)
       run: |
         cd mlops74
-        dvc pull data.dvc
+        dvc pull
 
     - name: Build the Docker image
       run: |
