--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Install DVC
       run: |
         pip install dvc
+        pip install "dvc[gdrive]"
 
     - name: Authenticate with DVC (using previously committed credentials)
       run: |
