--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         cd mlops74
         pip install -U pyopenssl cryptography
-        dvc pull -a -r mlops74 -d gdrive://1UYdxxlSoLmMY2lXc6bFoct7Ie8vYsLIz
+        dvc pull
 
     - name: Build the Docker image
       run: |
