--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         cd mlops74
         pip install -U pyopenssl cryptography
-        dvc pull
+        dvc pull -v
 
     - name: Build the Docker image
       run: |
