--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-torch >= 2.1.0
-matplotlib >= 3.8.0
-torchvision >= 0.15.2
-tqdm >= 4.66.1
-numpy >= 1.26.0
-opencv-python >= 4.6.0
+hydra-core==1.3.2
+numpy==1.26.3
+omegaconf==2.3.0
+pytest==7.4.4
+torch==2.1.0
+torchvision==0.15.2a0
+tqdm==4.66.1
