--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-hydra-core==1.3.2
+hydra-core<1.3.2
 numpy<1.27
-omegaconf==2.3.0
-pytest==7.4.4
-torch==2.1.0
-torchvision==0.15.2a0
-tqdm==4.66.1
+omegaconf<2.3.0
+pytest<7.4.4
+torch<2.1.0
+torchvision<0.15.2a0
+tqdm<4.66.1
