--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,7 @@
 [core]
-    remote = storage
+    remote = remote_storage
 ['remote "storage"']
     url = gdrive://1UYdxxlSoLmMY2lXc6bFoct7Ie8vYsLIz
+['remote "remote_storage"']
+    url = gs://mlops74bucket/
+    version_aware = true
