--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install DVC
       run: |
         pip install dvc
-        pip install "dvc[gdrive]"
+        pip install "dvc[gs]"
 
     - name: Authenticate with DVC (using previously committed credentials)
       run: |
