--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install dvc
-        pip install "dvc[gdrive]"
+        pip install "dvc[gs]"
         pip install -r requirements.txt
         pip install -r requirements_tests.txt
 
