--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         pip install dvc
         pip install "dvc[gs]"
+        pip install "dvc[gdrive]"
 
     - name: Authenticate with DVC (using previously committed credentials)
       run: |
