--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,8 +29,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install dvc
         pip install "dvc[gs]"
-        pip install -r requirements.txt
-        pip install -r requirements_tests.txt
+        pip install -r mlops74/requirements.txt
+        pip install -r mlops74/requirements_tests.txt
 
     - name: Test with pytest
       run: |
