--- a/.dvc/config
+++ b/.dvc/config
@@ -1,7 +1,4 @@
 [core]
-    remote = remote_storage
+    remote = storage
 ['remote "storage"']
     url = gdrive://1UYdxxlSoLmMY2lXc6bFoct7Ie8vYsLIz
-['remote "remote_storage"']
-    url = gs://mlops74_bucket/
-    version_aware = true
