--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,8 +21,8 @@ jobs:
         pip install dvc
         pip install "dvc[gs]"
         pip install "dvc[gdrive]"
-        echo ${{ secrets.DOCKER_SERVICE_ACCOUNT_KEY }} > key.json
-        gcloud auth activate-service-account --key-file=key.json
+        echo ${{ secrets.DOCKER_SERVICE_ACCOUNT_KEY }} > /tmp/key.json
+        gcloud auth activate-service-account --key-file=/tmp/key.json
     
     - name: DVC Pull
       run: |
