--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,17 +19,17 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Set up Python 3.11
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: 3.11
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install dvc
         pip install "dvc[gs]"
-        pip install -r mlops74/requirements.txt
+        pip install -r mlops74/requirements_workflows.txt
         pip install -r mlops74/requirements_tests.txt
 
     - name: Test with pytest
